# sdkwork-mail

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.base.json  tsconfig.json
.sdkwork/: README.md
apis/: README.md
apps/: README.md
configs/: README.md  mail-runtime.env.example  sdkwork-api-cloud-gateway.sdkwork-mail.development.toml  sdkwork-api-cloud-gateway.sdkwork-mail.production.toml  sdkwork-api-gateway.sdkwork-mail.development.toml  sdkwork-api-gateway.sdkwork-mail.production.toml
crates/: README.md
crates/sdkwork-api-mail-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-mail-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-mail-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-mail-standalone-gateway/: Cargo.toml
crates/sdkwork-api-mail-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-api-mail-standalone-gateway/src/: main.rs
crates/sdkwork-communication-mail-repository-sqlx/: Cargo.toml
crates/sdkwork-communication-mail-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-communication-mail-repository-sqlx/src/: database.rs  lib.rs  persistence.rs
crates/sdkwork-mail-database-host/: Cargo.toml
crates/sdkwork-mail-database-host/src/: lib.rs
crates/sdkwork-mail-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-mail-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-mail-service-host/: Cargo.toml
crates/sdkwork-mail-service-host/specs/: README.md  component.spec.json
crates/sdkwork-mail-service-host/src/: drive_attachment_port.rs  lib.rs  mailbox_sync.rs  outbound.rs  providers.rs  service.rs  transactional.rs  transport_resolver.rs
crates/sdkwork-mail-standalone-gateway/: Cargo.toml
crates/sdkwork-mail-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-mail-standalone-gateway/src/: bootstrap.rs  main.rs
crates/sdkwork-router-mail-backend-api/: Cargo.toml  build.rs
crates/sdkwork-router-mail-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-router-mail-backend-api/src/: handlers.rs  lib.rs  paths.rs  routes.rs  service.rs  web_bootstrap.rs
database/: README.md  database.manifest.json
deployments/: README.md  deploy.yaml
docs/: INDEX.yaml  README.md  mail-im-boundary.md  topology-standard.md
examples/: README.md
jobs/: README.md
plugins/: README.md
plugins/mail-imap/: Cargo.toml
plugins/mail-imap/specs/: component.spec.json
plugins/mail-imap/src/: config.rs  imap_sync.rs  lib.rs
plugins/mail-smtp/: Cargo.toml
plugins/mail-smtp/specs/: component.spec.json
plugins/mail-smtp/src/: config.rs  lib.rs  logging_transport.rs  smtp_transport.rs
scripts/: README.md  gateway-cloud-bundle.mjs  mail-dev.mjs  prepare-ci-dependencies.mjs
sdks/: README.md  materialize-mail-v3-openapi-boundaries.mjs
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_agora/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_aliyun/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_imap/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_imap/sdkwork_mail_sdk_provider_imap/: __init__.py
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_janus/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_jitsi/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_livekit/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_mediasoup/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_smtp/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_smtp/sdkwork_mail_sdk_provider_smtp/: __init__.py
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_tencent/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_twilio/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_volcengine/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-python/providers/sdkwork_mail_sdk_provider_zego/: README.md  pyproject.toml
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/Mail-sdk-provider-imap/: Cargo.toml  README.md
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/Mail-sdk-provider-imap/src/: lib.rs
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/Mail-sdk-provider-smtp/: Cargo.toml  README.md
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/Mail-sdk-provider-smtp/src/: lib.rs
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-agora/: Cargo.toml  README.md
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-agora/src/: lib.rs
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-aliyun/: Cargo.toml  README.md
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-aliyun/src/: lib.rs
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-janus/: Cargo.toml  README.md
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-janus/src/: lib.rs
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-jitsi/: Cargo.toml  README.md
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-jitsi/src/: lib.rs
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-livekit/: Cargo.toml  README.md
sdks/sdkwork-mail-sdk/sdkwork-mail-sdk-rust/providers/mail-sdk-provider-livekit/src/: lib.rs
specs/: README.md  (+5 more)
(+690 files in other folders)
