[package]
name = "sdkwork-api-mail-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-mail application HTTP plane."

[lib]
name = "sdkwork_api_mail_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-mail-app-api.workspace = true
sdkwork-routes-mail-backend-api.workspace = true
