[package]
name = "sdkwork-api-mail-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-mail application HTTP plane."

[lib]
name = "sdkwork_api_mail_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
anyhow = "1.0.98"
sdkwork-communication-mail-repository-sqlx.workspace = true
sdkwork-mail-adapter-smtp.workspace = true
sdkwork-mail-service-host.workspace = true
sdkwork-routes-mail-app-api.workspace = true
sdkwork-routes-mail-backend-api.workspace = true
