[package]
name = "sdkwork-mail-database-host"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "SDKWork Mail database lifecycle bootstrap."

[lib]
name = "sdkwork_mail_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
