[package]
name = "sdkwork-mail-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-mail application HTTP plane."

[lib]
name = "sdkwork_mail_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.98"
sdkwork-communication-mail-repository-sqlx.workspace = true
sdkwork-mail-adapter-smtp.workspace = true
sdkwork-mail-service-host.workspace = true
sdkwork_routes_mail_app_api = { package = "sdkwork-routes-mail-app-api", path = "../sdkwork-routes-mail-app-api" }
sdkwork_routes_mail_backend_api = { package = "sdkwork-routes-mail-backend-api", path = "../sdkwork-routes-mail-backend-api" }
