[package]
name = "sdkwork-mail-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-communication-mail-service.workspace = true
sdkwork-mail-adapter-smtp.workspace = true
sdkwork-router-mail-app-api.workspace = true
sdkwork-router-mail-backend-api.workspace = true
sdkwork-utils-rust.workspace = true
serde_json.workspace = true
uuid.workspace = true
