[package]
name = "sdkwork-mail-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-communication-mail-service.workspace = true
sdkwork-mail-adapter-imap.workspace = true
sdkwork-mail-adapter-smtp.workspace = true
sdkwork-routes-mail-app-api.workspace = true
sdkwork-routes-mail-backend-api.workspace = true
sdkwork-utils-rust.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
