[package]
name = "sdkwork-mail-adapter-smtp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
lettre = { version = "0.11.19", default-features = false, features = [
  "tokio1-rustls-tls",
  "smtp-transport",
  "builder",
] }
sdkwork-communication-mail-service.workspace = true
sdkwork-utils-rust.workspace = true
tracing.workspace = true
tokio.workspace = true
