[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-agora"
version = "0.1.0"
description = "Reserved Python provider package boundary for Agora Mail"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_agora"]

[tool.sdkwork-mail-provider]
providerKey = "agora"
pluginId = "Mail-agora"
driverId = "sdkwork-mail-driver-agora"
packageIdentity = "sdkwork-mail-sdk-provider-agora"
sourcePath = "sdkwork_mail_sdk_provider_agora/__init__.py"
sourceSymbol = "MailProviderAgoraPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
