[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-aliyun"
version = "0.1.0"
description = "Reserved Python provider package boundary for Aliyun Mail"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_aliyun"]

[tool.sdkwork-mail-provider]
providerKey = "aliyun"
pluginId = "Mail-aliyun"
driverId = "sdkwork-mail-driver-aliyun"
packageIdentity = "sdkwork-mail-sdk-provider-aliyun"
sourcePath = "sdkwork_mail_sdk_provider_aliyun/__init__.py"
sourceSymbol = "MailProviderAliyunPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
