[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-janus"
version = "0.1.0"
description = "Reserved Python provider package boundary for Janus Mail"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_janus"]

[tool.sdkwork-mail-provider]
providerKey = "janus"
pluginId = "Mail-janus"
driverId = "sdkwork-mail-driver-janus"
packageIdentity = "sdkwork-mail-sdk-provider-janus"
sourcePath = "sdkwork_mail_sdk_provider_janus/__init__.py"
sourceSymbol = "MailProviderJanusPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
