[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-jitsi"
version = "0.1.0"
description = "Reserved Python provider package boundary for Jitsi Meet"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_jitsi"]

[tool.sdkwork-mail-provider]
providerKey = "jitsi"
pluginId = "Mail-jitsi"
driverId = "sdkwork-mail-driver-jitsi"
packageIdentity = "sdkwork-mail-sdk-provider-jitsi"
sourcePath = "sdkwork_mail_sdk_provider_jitsi/__init__.py"
sourceSymbol = "MailProviderJitsiPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
