[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-livekit"
version = "0.1.0"
description = "Reserved Python provider package boundary for LiveKit Mail"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_livekit"]

[tool.sdkwork-mail-provider]
providerKey = "livekit"
pluginId = "Mail-livekit"
driverId = "sdkwork-mail-driver-livekit"
packageIdentity = "sdkwork-mail-sdk-provider-livekit"
sourcePath = "sdkwork_mail_sdk_provider_livekit/__init__.py"
sourceSymbol = "MailProviderLivekitPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
