[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-mediasoup"
version = "0.1.0"
description = "Reserved Python provider package boundary for mediasoup Mail"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_mediasoup"]

[tool.sdkwork-mail-provider]
providerKey = "mediasoup"
pluginId = "Mail-mediasoup"
driverId = "sdkwork-mail-driver-mediasoup"
packageIdentity = "sdkwork-mail-sdk-provider-mediasoup"
sourcePath = "sdkwork_mail_sdk_provider_mediasoup/__init__.py"
sourceSymbol = "MailProviderMediasoupPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
