[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-smtp"
version = "0.1.0"
description = "Reserved Python provider package boundary for SMTP Mail Transport"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_smtp"]

[tool.sdkwork-mail-provider]
providerKey = "smtp"
pluginId = "Mail-smtp"
driverId = "sdkwork-mail-driver-smtp"
packageIdentity = "sdkwork-mail-sdk-provider-smtp"
sourcePath = "sdkwork_mail_sdk_provider_smtp/__init__.py"
sourceSymbol = "MailProviderSmtpPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
