[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-tencent"
version = "0.1.0"
description = "Reserved Python provider package boundary for Tencent Mail"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_tencent"]

[tool.sdkwork-mail-provider]
providerKey = "tencent"
pluginId = "Mail-tencent"
driverId = "sdkwork-mail-driver-tencent"
packageIdentity = "sdkwork-mail-sdk-provider-tencent"
sourcePath = "sdkwork_mail_sdk_provider_tencent/__init__.py"
sourceSymbol = "MailProviderTencentPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
