[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-twilio"
version = "0.1.0"
description = "Reserved Python provider package boundary for Twilio Video"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_twilio"]

[tool.sdkwork-mail-provider]
providerKey = "twilio"
pluginId = "Mail-twilio"
driverId = "sdkwork-mail-driver-twilio"
packageIdentity = "sdkwork-mail-sdk-provider-twilio"
sourcePath = "sdkwork_mail_sdk_provider_twilio/__init__.py"
sourceSymbol = "MailProviderTwilioPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
