[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-volcengine"
version = "0.1.0"
description = "Reserved Python provider package boundary for Volcengine Mail"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_volcengine"]

[tool.sdkwork-mail-provider]
providerKey = "volcengine"
pluginId = "Mail-volcengine"
driverId = "sdkwork-mail-driver-volcengine"
packageIdentity = "sdkwork-mail-sdk-provider-volcengine"
sourcePath = "sdkwork_mail_sdk_provider_volcengine/__init__.py"
sourceSymbol = "MailProviderVolcenginePackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
