[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-mail-sdk-provider-zego"
version = "0.1.0"
description = "Reserved Python provider package boundary for ZEGO Mail"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_mail_sdk_provider_zego"]

[tool.sdkwork-mail-provider]
providerKey = "zego"
pluginId = "Mail-zego"
driverId = "sdkwork-mail-driver-zego"
packageIdentity = "sdkwork-mail-sdk-provider-zego"
sourcePath = "sdkwork_mail_sdk_provider_zego/__init__.py"
sourceSymbol = "MailProviderZegoPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
