[package]
name = "Mail-sdk-provider-imap"
version = "0.1.0"
edition = "2021"
description = "Reserved Rust provider package boundary for IMAP Mail Sync"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.sdkwork-mail-provider]
providerKey = "imap"
pluginId = "Mail-imap"
driverId = "sdkwork-mail-driver-imap"
packageIdentity = "Mail-sdk-provider-imap"
sourcePath = "src/lib.rs"
sourceSymbol = "MailProviderImapPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
