[package]
name = "Mail-sdk-provider-smtp"
version = "0.1.0"
edition = "2021"
description = "Reserved Rust provider package boundary for SMTP Mail Transport"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.sdkwork-mail-provider]
providerKey = "smtp"
pluginId = "Mail-smtp"
driverId = "sdkwork-mail-driver-smtp"
packageIdentity = "Mail-sdk-provider-smtp"
sourcePath = "src/lib.rs"
sourceSymbol = "MailProviderSmtpPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
