[package]
name = "Mail-sdk-provider-agora"
version = "0.1.0"
edition = "2021"
description = "Reserved Rust provider package boundary for Agora Mail"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.sdkwork-mail-provider]
providerKey = "agora"
pluginId = "Mail-agora"
driverId = "sdkwork-mail-driver-agora"
packageIdentity = "Mail-sdk-provider-agora"
sourcePath = "src/lib.rs"
sourceSymbol = "MailProviderAgoraPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
