[package]
name = "Mail-sdk-provider-janus"
version = "0.1.0"
edition = "2021"
description = "Reserved Rust provider package boundary for Janus Mail"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.sdkwork-mail-provider]
providerKey = "janus"
pluginId = "Mail-janus"
driverId = "sdkwork-mail-driver-janus"
packageIdentity = "Mail-sdk-provider-janus"
sourcePath = "src/lib.rs"
sourceSymbol = "MailProviderJanusPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
