[package]
name = "Mail-sdk-provider-livekit"
version = "0.1.0"
edition = "2021"
description = "Reserved Rust provider package boundary for LiveKit Mail"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.sdkwork-mail-provider]
providerKey = "livekit"
pluginId = "Mail-livekit"
driverId = "sdkwork-mail-driver-livekit"
packageIdentity = "Mail-sdk-provider-livekit"
sourcePath = "src/lib.rs"
sourceSymbol = "MailProviderLivekitPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
